# bridge-risk-assessment-insar

./: .gitignore  LICENSE  README.md  predict_PS_dens_for_region.py  pyproject.toml  requirements.txt
src/: model_trainining.py  predict_PS_dens_for_region.ipynb
src/plots_for_paper/: plotting_helper.py
src/ps_predictions/: model_trainining copy.py  predict_PS_dens.ipynb  predict_PS_dens_for_region.ipynb  predict_PS_dens_for_region.py
src/ps_predictions/utils/: coordinates_selection.py  data_download.py  infrastructure_map_generation.py  preprocessing_OSM_data.py
src/risk_assessment/bridges_db/: divide_into_segments.py  get_zonal_stats_from_bridge_lines.py  process_bridges_db.py  retrieve_osm_lines_for_brdgs.py
src/risk_assessment/bridges_db/utils/: bridge_divisions.py
src/risk_assessment/risk_calculation/: asc_dsc_sent.py  exposure_assessment.py  lsb_risk_analysis.py  plots_source_data_generation.py
src/risk_calculations/bridges_db/: convert_csv_to_shp.py  divide_into_segments.py  get_zonal_stats_from_bridge_lines.py  list_repeated_points.py  process_bridges_db.py  retrieve_osm_lines_for_brdgs.py
src/risk_calculations/risk_calculation/: get_PSpred_for_tile_HPC.py  lsb_risk_analysis.py  risk_plots.py  risk_plots_for_paper.py  risk_plots_old.py  structural_vulnerability_assessment.py  test_pred.py
src/utils/: find_repo.py  prediction_plots.py
utils/: cut_osm_into_tiles.py  generate_gdf_with_tiles.py  model_setup.py  plotting_scatter_with_3rd_dim.py  torchgeo_classes_def.py  torchgeo_fun_to_read_input.py
(+3 files in other folders)
