[tool.poetry]
name = "ps-predictions"
version = "0.1.0"
description = "Code used in my PhD to train model for PS prediction, generate predctions, and analyse data for papers."
authors = ["Dominika Malinowska"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ps_predictions", from = "src" },
    { include = "utils", from = "src" }

]

[tool.poetry.dependencies]
python = "~3.10.0"
Cartopy = "0.22.0"
geocube = "0.4.2"
geopandas = "0.14.3"
kornia = "0.7.1"
lightning = "2.2.0.post0"
matplotlib = "3.8.2"
numpy = "1.26.3"
osmium = "3.7.0"
osmnx = "1.9.1"
pandas = "2.2.0"
pillow = "10.2.0"
pyproj = "3.6.1"
rasterio = "1.3.9"
rasterstats = "0.19.0"
scikit_learn = "1.5.0"
seaborn = "0.11"
segmentation_models_pytorch = "0.3.3"
setuptools = "68.2.2"
statsmodels = "0.14.2"
timm = "0.9.2"
torchgeo = "0.5.2"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
torchmetrics = "1.4.1"
utm = "0.7.0"
shapely = "^2.0.5"
pygeos = "^0.14"
openpyxl = "^3.1.5"
factor-analyzer = "^0.5.1"
jupytext = "^1.16.4"
rpy2 = "^3.5.17"
pingouin = "^0.5.5"
ipywidgets = "^8.1.7"
ptitprince = "^0.2.7"
zenodo-get = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
